@@ -367,8 +367,15 @@ static GdkPixbuf* _vfs_thumbnail_load( const char* file_path, const char* uri,
     int i, w, h;
     struct stat statbuf;
     GdkPixbuf* thumbnail, *result = NULL;
-    int create_size = size > 128 ? 256 : 128;
-
+    int create_size;
+    
+    if ( size > 256 )
+        create_size = 512;
+    else if ( size > 128 )
+        create_size = 256;
+    else
+        create_size = 128;
+    
     gboolean file_is_video = FALSE;
 #ifdef HAVE_FFMPEG
     VFSMimeType* mimetype = vfs_mime_type_get_from_file_name( file_path );
